[gd_scene load_steps=5 format=3 uid="uid://242e5atrea34"]

[ext_resource type="Script" uid="uid://dpqf2ft7eyhpi" path="res://addons/argode/ui/ArgodeDebugScreen.gd" id="1_okejy"]

[sub_resource type="SystemFont" id="SystemFont_okejy"]
font_names = PackedStringArray("Monospace", "Sans-Serif")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_okejy"]
default_font = SubResource("SystemFont_okejy")
default_font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okejy"]
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 0.792157)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.389287, 0.389287, 0.389286, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 20
shadow_offset = Vector2(0, 5)

[node name="ArgodeDebugScreen" type="CanvasLayer"]
script = ExtResource("1_okejy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_okejy")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 574.0
offset_top = 56.0
offset_right = -42.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_okejy")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Argode Debug Screen"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ConsoleVBox" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputLine" type="LineEdit" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
keep_editing_on_text_submit = true

[node name="SendButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "送信"
